--- a/index.html
+++ b/index.html
@@ -53,50 +53,44 @@
                 </div>
             </div>
         </div>
-        <section class="contenedorPersonal">
-            <div class="subPersonal">
-                <p>¡Hola! Soy Sofia, psicóloga especializada en el área laboral y en clínica
-                    psicoanalítica.<br>Actualmente me encuentro realizando un posgrado en psicoanálisis
-                    freudiano-lacaniano, y cuento además con más de cuatro años de experiencia en una Consultora de
-                    empleo multinacional.<br>Mi objetivo es ayudar a las personas a comprender y gestionar mejor sus
-                    emociones, tanto en el ámbito personal como profesional.
-                </p>
+        <section class="contenedorServicio">
+            <div class="contenedorInfo">
+                <div class="servicios">
+                    <h2>Servicios</h2>
+                </div>
+
+                <h3>Psicologia Clinica</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quibusdam debitis qui porro
+                    nesciunt
+                    omnis
+                    necessitatibus repellat voluptates veritatis autem inventore, nihil odit quia soluta nemo doloremque
+                    ea
+                    maiores neque.</p>
+                <h3>Preparacion Laboral</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic corporis exercitationem ut dignissimos
+                    necessitatibus porro temporibus vero? Optio aut sed, quae odio fuga ipsum commodi consectetur
+                    ducimus
+                    laboriosam neque iure!</p>
+                <h3>Busqueda de Personal</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet distinctio, laboriosam eligendi
+                    molestias
+                    doloremque aperiam adipisci. Sapiente ut, facilis nostrum amet praesentium voluptatem. Repellendus
+                    placeat
+                    ratione laboriosam ipsum fugiat pariatur?</p>
             </div>
         </section>
     </div>
-    <section class="contenedorServicio">
-        <div class="contenedorInfo">
-            <div class="servicios">
-                <h2>Servicios</h2>
-            </div>
-
-            <h3>Terapia psicoanalitica</h3>
-            <p>Atención presencial y virtual de jóvenes y adultos desde un enfoque psicoanalítico. Mediante esta terapia
-                busco ofrecer un espacio donde puedas explorar tu mundo interno, comprender lo que hay detrás de tus
-                pensamientos y emociones, y encontrar nuevas formas de vivir con mayor libertad y bienestar.
+    <section class="contenedorPersonal">
+        <div class="subPersonal">
+            <h2>Sobre Mi</h2>
+            <p>Soy Sofia Fontanini, tengo 30 años hace 5 que me recibi. <br>
+                En este momento me encuentro ampliando mi carrera profesional como Psicologa clinica, tambien cuento con
+                +3 años de experiencia en el mundo laboral como Talent Advenger reclutando personal para Randstad. Esta
+                experiencia mas los cursos tomados no solo me permiten buscar personal para empresas, si no tambien
+                realizar mis cursos de preparacion laboral. <br>
+                Tengo un perrito super Chechi que me da besitos todas las mañanas.
             </p>
-            <h3>Asesoramiento laboral</h3>
-            <p>Si estás por comenzar la búsqueda de tu primer empleo o estás considerando un cambio laboral, puede que
-                no sepas por dónde empezar. Es esencial conocer ciertos aspectos que harán tu búsqueda laboral más
-                sencilla.
-                Para ello brindo asesoramiento sobre cómo construir un CV asertivo, cuáles son los portales de empleos
-                más populares y tips para lucirte en una primera entrevista.
-            </p>
-            <h3>Talleres de estimulación cognitiva</h3>
-            <p>La estimulación cognitiva en adultos mayores es clave para mantener sus
-                funciones mentales activas y prevenir el deterioro de las mismas.
-                Nuestro cerebro tiene la capacidad de adaptarse y reorganizarse a lo largo de
-                la vida por lo que, aunque haya envejecimiento, el entrenamiento cognitivo puede
-                mejorar el rendimiento mental y la calidad de vida.
-                A través de actividades dinámicas y divertidas esto puede lograrse.
-            </p>
-            <h3>Selección de personal</h3>
-            <p>Reclutamiento y selección de perfiles operativos y profesionales, buscando la mayor adecuación entre el
-                perfil y el puesto a cubrir.
-                Publicación de avisos, screening telefónicos, entrevistas e informes para que cuentes con la mayor
-                cantidad de información. Sumar a un nuevo integrante a tu empresa o negocio es una decisión compleja,
-                pero no imposible.
-            </p>
+            <img src="./ICON/Titulo.jpg" alt="Titulo Profesional">
         </div>
     </section>
     <footer>
@@ -107,8 +101,7 @@
         <div class="logoFooter">
             <a href="#" target="_blank"><img src="ICON/linkedin.png" alt="Linkedin">
             </a>
-            <a class="instagramFooter" href="#" target="_blank"><img src="ICON/logotipo-de-instagram.png"
-                    alt="Instagram">
+            <a class="instagramFooter" href="#" target="_blank"><img src="ICON/logotipo-de-instagram.png" alt="Instagram">
             </a>
         </div>
     </footer>
